added a searching animation to the ui with an input box asking for a value to search for

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <input id="newNodeInput" />
             <button type="submit" id="newNodeBtn" class="btn btn-outline-primary">Add new node</button>
         </form>
+        <form id="searchNodeForm">
+            <input id="searchNodeInput" />
+            <button type="submit" id="searchNodeBtn" class="btn btn-outline-primary">Search For Node</button>
+        </form>
     </nav>
     <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
